--- a/.gitignore
+++ b/.gitignore
@@ -248,3 +248,4 @@ env/lib/python3.7/site-packages/urllib3/util/url.py
 env/lib/python3.7/site-packages/urllib3/util/wait.py
 env/bin/chardetect
 config.py
+config.pyc
